force-app/main/default/objects/SfdcDcx_Field_Mapping__mdt/SfdcDcx_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>ScanForce Open: maps a path in a Completed job's structured result to a field on the job's source record. Applied on user request or by the Apply Field Mappings action, always with the running user's access.</description>
    <label>ScanForce Open Field Mapping</label>
    <pluralLabel>ScanForce Open Field Mappings</pluralLabel>
</CustomObject>