force-app/main/default/objects/SfdcDcx_Field_Mapping__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only active mappings are previewed and applied.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>