force-app/main/default/objects/SfdcDcx_Field_Mapping__mdt/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Result documentType or submitted type hint this mapping applies to, for example invoice. Use * for every document type.</description>
    <label>Document Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>