force-app/main/default/objects/SfdcDcx_Field_Mapping__mdt/fields/Result_Path__c.field-meta.xml
<CustomField>
    <fullName>Result_Path__c</fullName>
    <description>Dot path inside the provider result object, for example total, supplier.name or lines.0.amount.</description>
    <label>Result Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>