force-app/main/default/objects/SfdcDcx_Field_Mapping__mdt/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>API name of the source record object, for example Account or Opportunity.</description>
    <label>Target Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>